--- a/index.html
+++ b/index.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
 <html lang="ru">
-  <head>
-    <meta charset="UTF-8">
-    <link rel="manifest" href="/manifest.json">
-    <title>FOOD</title>
-  </head>
-  <body>
-    <div id="app"></div>
-    <script type="module" src="/src/main.js"></script>
-    <script src="/src/app.js"></script>
-  </body>
+
+<head>
+  <meta charset="UTF-8">
+  <title>FOOD</title>
+</head>
+
+<body>
+  <div id="app"></div>
+</body>
+<script>
+</script>
+
 </html>
